Disabled connexion login/password

--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   "db": {
     "port": 27017,
     "host": "localhost",
-    "username": "foo",
-    "password": "bar"
+    "username.DISABLED": "foo",
+    "password.DISABLED": "bar"
   },
   "server": {
     "port": 3500,
